# babl

./: NEWS  configure.ac
babl/: Makefile.am  babl-cache.c  babl-cpuaccel.c  babl-cpuaccel.h  babl-extension.c  babl-fish-path.c  babl-format.c  babl-ids.h  babl-model.h  babl-palette.c  babl.c  babl.h
babl/base/: Makefile.am  babl-base.c  babl-base.h  conversions-type.c  formats.c  model-gray.c  model-rgb.c  model-ycbcr.c  pow-24.c  util.h
extensions/: 16bit.c  CIE.c  HCY.c  HSL.c  HSV.c  Makefile.am  cairo.c  fast-float.c  float-half.c  gegl-fixups.c  gggl-table-lies.c  gggl-table.c  gimp-8bit.c  grey.c  naive-CMYK.c  sse-half.c  sse2-float.c  sse2-int16.c  sse4-int8.c  ycbcr.c
tests/: .gitignore  Makefile.am  rgb_to_ycbcr.c
tools/: babl-verify.sh
